style.css
body {
    font-family: Arial, sans-serif;
    margin: 0;
    padding: 0;
    background: #F0F0F0;
}

.header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    background: #00B385;
    color: #ffffff;
    padding: 1em;
    text-shadow: 1px 1px 2px black, 0 1px 1px rgba(0, 0, 0, 0.15);
    position: relative;
    z-index: 2;
}

h1 {
    flex-grow: 1;
    text-align: center;
    margin: 0;
    padding: 0;

}

.nav-bar {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    width: 250px;
    background-color: #00B385;
    transform: translateX(-100%);
    transition: transform 0.3s ease;
    z-index: 1;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    padding-top: 60px;
}

@media (max-width: 700px) {
    .nav-bar {
        top: 7%;
    }
}

@media (max-width: 630px) {
    .nav-bar {
        top: 5%;
    }
}

@media (max-width: 430px) {
    .nav-bar {
        top: 5%;
    }
}

@media (max-width: 390px) {
    .nav-bar {
        top: 6%;
    }
}

@media (max-width: 414px) {
    .nav-bar {
        top: 10%;
    }
}

@media (max-width: 375px) {
    .nav-bar {
        top: 10%;
    }
}

.nav-bar a {
    color: white;
    text-decoration: none;
    margin: 15px 25px;
    font-size: 1.2em;
    transition: color 0.3s, text-shadow 0.3s;
    z-index: 1;
}

.nav-bar a:hover {
    color: #ffffff;
    text-shadow: 0px 0px 8px rgb(255, 255, 255);
}

.welcome-section {
    padding: 50px 20px;
    text-align: center;
}

.welcome-section h1,
.welcome-section p {
    color: #000000;
    margin-top: 0;
}

.footer {
    text-align: center;
    padding: 20px 0;
    background-color: #00B385;
    color: white;
    position: fixed;
    justify-content: end;
    bottom: 0;
    width: 100%;
}

@media (max-width: 500px) {
    .footer {
        position: relative;
    }
}

.line {
    border: none;
    height: 2px;
    background-color: black;
    margin: 20px 0;
}

.btn-hidden {
    margin-right: auto;
    display: flex;
    align-items: center;
    justify-content: left;
    min-height: 10px;
    padding-left: 0;
    padding-right: 0;
    border: none;
    background-color: transparent;
    color: inherit;
    cursor: pointer;
    transition: .3s ease;
    padding: 0 20px;
    justify-self: start;
    margin-right: auto;
    visibility: hidden;
}

.btn-menu {
    margin-right: auto;
    display: flex;
    align-items: center;
    justify-content: left;
    min-height: 10px;
    padding-left: 0;
    padding-right: 0;
    border: none;
    background-color: transparent;
    color: inherit;
    cursor: pointer;
    transition: .3s ease;
    padding: 0 20px;
    justify-self: start;
    margin-right: auto;
}

.btn-menu:focus {
    outline: none;
}

.btn-menu__text {
    margin-left: 10px;
    font-size: 1.125rem;
    font-weight: 700;
    line-height: 1;
}

.btn-menu__bars {
    display: block;
    position: relative;
    width: 35px;
    height: 4px;
    background-color: #ffffff;
    transition: .3s;
}

.btn-menu__bars:before,
.btn-menu__bars:after {
    content: "";
    display: block;
    position: absolute;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: #ffffff;
    transition: .3s;
}

.btn-menu__bars:before {
    transform: translate(0, -11px);
}

.btn-menu__bars:after {
    transform: translate(0, 11px);
}

.menu-open .btn-menu__bars {
    background-color: transparent;
}

.menu-open .btn-menu__bars:before {
    transform: rotate(45deg);
}

.menu-open .btn-menu__bars:after {
    transform: rotate(-45deg);
}


.menu-open .nav-bar {
    transform: translateX(0);
}

.CC {
    max-width: 10%;
}

section {
    background: white;
    padding: 20px;
    margin: 20px 0;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
}

h2 {
    color: #005A9C;
    margin-bottom: 10px;
}
.ethane-container {
    position: relative;
    display: inline-block; 
    margin: 20px 0;
}

.ethane-title {
    position: absolute;
    top: 5px;
    left: 0;
    width: 100%;
    text-align: center;
    margin-top: -5px; 
    background: #FFFFFF;
    color: #000000; 
    padding: 5px 0; 
    box-shadow: 0 2px 5px rgba(0,0,0,0.2); 
}

.image {
    width: 500px;
    height: 350px;
    object-fit: cover;
    background: white;
    padding: 20px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
}

